{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 166,
  "lineage": "d513ecdb-50bf-ab2f-a484-8f012a76f798",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "res-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aeb7c931a5a61206",
            "arn": "arn:aws:ec2:us-east-2:589203677308:instance/i-0018d319518042ed0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0018d319518042ed0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-demo-jyue-ohio",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0cb9ac3052ecc72a9"
              }
            ],
            "primary_network_interface_id": "eni-0cb9ac3052ecc72a9",
            "private_dns": "ip-10-0-1-200.us-east-2.compute.internal",
            "private_ip": "10.0.1.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01c11806887fcc0e8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01a8e723ee4fbaa74",
            "tags": {
              "Name": "res-web-server-ihio"
            },
            "tags_all": {
              "Name": "res-web-server-ihio"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05a20cf79c6c57055"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web_server_ports",
            "aws_subnet.res-subnet-02",
            "aws_vpc.res-main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "res-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:589203677308:internet-gateway/igw-0633a433f7625008b",
            "id": "igw-0633a433f7625008b",
            "owner_id": "589203677308",
            "tags": {
              "Name": "res-igw-ue2"
            },
            "tags_all": {
              "Name": "res-igw-ue2"
            },
            "vpc_id": "vpc-0caa0f57c360125ae"
          },
          "dependencies": [
            "aws_vpc.res-main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:589203677308:network-interface/eni-0cb9ac3052ecc72a9",
            "id": "eni-0cb9ac3052ecc72a9",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:cc:d3:7c:f8:00",
            "owner_id": "589203677308",
            "private_dns_name": "ip-10-0-1-200.us-east-2.compute.internal",
            "private_ip": "10.0.1.200",
            "private_ip_list": [
              "10.0.1.200"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.200"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05a20cf79c6c57055"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01a8e723ee4fbaa74"
          },
          "dependencies": [
            "aws_security_group.allow_web_server_ports",
            "aws_subnet.res-subnet-02",
            "aws_vpc.res-main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "res-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:589203677308:route-table/rtb-0a4cd3e453b7f7fa4",
            "id": "rtb-0a4cd3e453b7f7fa4",
            "owner_id": "589203677308",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0633a433f7625008b",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0633a433f7625008b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "res-routetable-ue2"
            },
            "tags_all": {
              "Name": "res-routetable-ue2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0caa0f57c360125ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.res-igw",
            "aws_vpc.res-main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052dfca683e96cb1c",
            "route_table_id": "rtb-0a4cd3e453b7f7fa4",
            "subnet_id": "subnet-01a8e723ee4fbaa74"
          },
          "dependencies": [
            "aws_internet_gateway.res-igw",
            "aws_route_table.res-rt",
            "aws_subnet.res-subnet-02",
            "aws_vpc.res-main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web_server_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:589203677308:security-group/sg-05a20cf79c6c57055",
            "description": "Allow Web server inbound traffics",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a20cf79c6c57055",
            "ingress": [
              {
                "cidr_blocks": [
                  "18.162.0.0/16"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "18.162.0.0/16"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "18.162.0.0/16"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_server_ports",
            "name_prefix": "",
            "owner_id": "589203677308",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web_server_ports"
            },
            "tags_all": {
              "Name": "allow_web_server_ports"
            },
            "timeouts": null,
            "vpc_id": "vpc-0caa0f57c360125ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.res-main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "res-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:589203677308:subnet/subnet-01a8e723ee4fbaa74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a8e723ee4fbaa74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "589203677308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "res-subnet-02"
            },
            "tags_all": {
              "Name": "res-subnet-02"
            },
            "vpc_id": "vpc-0caa0f57c360125ae"
          },
          "dependencies": [
            "aws_vpc.res-main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "res-main-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:589203677308:vpc/vpc-0caa0f57c360125ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.1.0/24",
            "default_network_acl_id": "acl-0d358d98cbc33fa17",
            "default_route_table_id": "rtb-02f78cf0fb5bf3607",
            "default_security_group_id": "sg-0a94c8dd2fa865d9d",
            "dhcp_options_id": "dopt-8f5e39e4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0caa0f57c360125ae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f78cf0fb5bf3607",
            "owner_id": "589203677308",
            "tags": {
              "Name": "res-main-vpc"
            },
            "tags_all": {
              "Name": "res-main-vpc"
            }
          }
        }
      ]
    }
  ]
}